css/designsprint.css
body, html {
    background: #f7f7f7;
    color: #222;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

header {
    background-attachment: fixed;
    background-image: url(../images/writing/designsprint/photo-sketching-blackandwhite.jpg);
    background-position: 50% 100%;
    background-size: cover;
    position: relative;
}

.header-wrap-gray {
    background: linear-gradient(180deg, transparent 0%, rgba(17,17,17,1) 100%);
    height: 100vh;
}

.header-wrap-white {
    background: linear-gradient(180deg, transparent 0%, rgba(247,247,247,0) 66%, rgba(247,247,247,1) 100%);
}

@media only screen and (max-width : 767.98px) {
    .header-wrap-white {
        background: linear-gradient(180deg, transparent 0%, rgba(247,247,247,0) 40%, rgba(247,247,247,1) 70%);
    }
}

.header-text {
    background: transparent;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    width: calc(100% - 30px);
}

@media only screen and (max-width : 767.98px) {

    .header-text img {
        width: 100%;
    }

}

.logo {
    background-image: url(../images/writing/logo-mobile-white.png);
    background-repeat: no-repeat;
    background-size: 100%;
    height: 30px;
    left: calc(50% - 24px);
    position: absolute;
    top: 20px;
    width: 53px;
}

@media only screen and (min-width : 768px) {
    .logo {
        background-image: url(../images/writing/logo-mobile-sprite.svg);
        background-position: 0 0;
    }

    .logo:hover {
        background-position: 0 -60px;
    }
}

.mini-nav {
    margin-top: 60px;
    text-align: right;
}

.mini-nav a {
    color: rgba(0,0,0,0.5);
    margin: 0 20px;
    padding-bottom: 2px;
    text-decoration: none;
}

.mini-nav a:hover, .mini-nav a:focus {
    border-bottom: 2px solid #000;
    color: #000;
}

.mini-nav a.active-nav {
    border-bottom: 2px solid #000;
    color: #000;
    cursor: default;
}

.mini-nav.white a {
    color: rgba(255,255,255,0.5);
}

.mini-nav a:hover, .mini-nav a:focus, .mini-nav a.active-nav {
    border-bottom: 2px solid #fff;
    color: #fff;
}

.mini-nav a:last-of-type {
    margin-right: 0;
}

header h2 {
    color: #fff;
    font-size: 36px;
    font-weight: 100;
    margin-top: 10px;
    margin-bottom: 40px;
    text-align: left;
}

.embed-responsive {
    margin-top: 10px;
    margin-bottom: 20px;
}

h2 {
    font-family: Georgia;
    font-size: 35px;
    font-style: italic;
    font-weight: 900;
    margin-top: 40px;
    margin-bottom: 25px;
    text-align: center;
}

article h2::after {
    border-top: 10px solid #f15403;
    content: '';
    display: block;
    margin: 30px auto;
    width: 80px;
}

h3 {
    background-image: url(../images/writing/monogram-gray-on-white.png);
    background-repeat: no-repeat;
    background-position: 50% 0;
    font-size: 22px;
    font-weight: 900;
    margin-bottom: 20px;
    margin-top: 50px;
    padding-top: 80px;
    text-transform: uppercase;
}

article h2 + h3, article .dark h2 + article .dark h3 {
    background: none !important;
    margin-top: 30px;
    padding-top: 26px;
}

h4 {
    background: #222;
    color: #fff;
    display: inline-block;
    font-family: Helvetica;
    font-size: 22px;
    font-weight: 900;
    margin: 20px 0;
    padding: 5px 10px;
    text-transform: uppercase;
}

h5 {
    color: rgba(255,255,255,0.5);
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
    letter-spacing: 3px;
    margin-top: 0;
    margin-bottom: 5px;
    text-transform: uppercase;
}

.work-container h5 {
    margin-bottom: 0;
}

article a {
    border-bottom: 2px solid #f15403;
    color: #222;
    padding-bottom: 2px;
}

article a:hover {
    border-bottom-color: transparent;
    color: #f15403;
    text-decoration: none;
}

article p, article li {
    font-family: Georgia;
    font-size: 18px;
    font-weight: 300;
    margin-bottom: 20px;
    position: relative;
}

article img {
    border-radius: 10px;
}

figure {
    background: #fff;
    border-radius: 10px; 
    margin: 60px auto;
    padding: 20px;
}

@media only screen and (max-width: 767.98px) {
    figure {
        margin: 40px auto;
    }
}

.transparent-background {
    background: transparent;
    padding: 0;
}

figcaption {
    font-family: Georgia;
    font-style: italic;
    margin: 10px 0 20px;
    opacity: 0.7;
}

figcaption .credit {
    text-align: right;
}

figcaption.center-caption {
    text-align: center;
}

article ul {
    padding-left: 0;
}

article li {
    list-style: none;
    padding-left: 20px;
}

article li::before {
    content: '';
    position: absolute;
    left: 0;
    top: 11px;
    width: 8px;
    height: 8px;
    background-color: #f15403;
    border-radius: 50%;
}

article ul.double-entry-list strong {
    display: block;
}

article .dark {
    background: #eee;
    border-top: 2px solid #ccc;
    border-bottom: 2px solid #ccc;
    color: #000;
    margin: 40px 0;
    padding: 60px 0
}

article .dark strong,
article .dark h2,
article .dark h3 {
    color: #000;
}

article .dark + .dark {
    margin: 0;
    padding-top: 0;
}

article .dark.leadsection {
    background: rgba(17,17,17,1);
    border: none;
    color: rgba(255,255,255,0.9);
    margin-top: 0;
    padding-top: 0;
    padding-bottom: 40px;
}

article .dark.leadsection strong,
article .dark.leadsection a {
    color: #fff;
}

article .dark.leadsection blockquote {
    border-color: #fff;
}

article .dark a {
    color: #000;
}

article .dark a:hover {
    color: #f15403;
}


/*
article .dark li {
    border-top: 1px solid rgba(255, 255, 255, 0.1);
    list-style-position: inside;
    list-style-type: circle;
    margin: 0;
    padding: 20px 0;
}

article .dark li:first-of-type {
    border-top: none;
    padding-top: 0;
}

article .dark li:last-of-type {
    padding-bottom: 0;
}
/* ... */

